feat: photo쿼리 서비스 추가